add more images and fit them in the grid

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
           justify-content: center;
           align-items: center;
           img {
-            width: 80%;
+            max-width: 100%;
+            max-height: 100%;
+            display: block; /* removes bottom space under image */
+            object-fit: contain;
           }
         }
       }
@@ -127,6 +130,81 @@
       <div class="slide fade">
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
         <img src="./images/11.png" style="width: 80%" />
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div>
+      <div class="slide fade">
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <img src="./images/foodApp/1.png" style="width: 80%" />
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div>
+      <div class="slide fade">
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <img src="./images/foodApp/2.png" style="width: 80%" />
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div>
+      <div class="slide fade">
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <img src="./images/foodApp/3.png" style="width: 80%" />
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div>
+      <div class="slide fade">
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <img src="./images/foodApp/4.png" style="width: 80%" />
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div>
+      <div class="slide fade">
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <img src="./images/foodApp/5.png" style="width: 80%" />
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div>
+      <div class="slide fade">
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <img src="./images/foodApp/6.png" style="width: 80%" />
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div>
+      <div class="slide fade">
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <img src="./images/foodApp/7.png" style="width: 80%" />
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div>
+      <div class="slide fade">
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <img src="./images/foodApp/8.png" style="width: 80%" />
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div>
+      <div class="slide fade">
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <img src="./images/foodApp/9.png" style="width: 80%" />
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div>
+      <div class="slide fade">
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <img src="./images/foodApp/10.png" style="width: 80%" />
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div>
+      <div class="slide fade">
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <img src="./images/foodApp/11.png" style="width: 80%" />
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div>
+      <div class="slide fade">
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <img src="./images/foodApp/12.png" style="width: 80%" />
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div>
+      <div class="slide fade">
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <img src="./images/foodApp/13.png" style="width: 80%" />
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div>
+      <div class="slide fade">
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <img src="./images/foodApp/14.png" style="width: 80%" />
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div>
+      <div class="slide fade">
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <img src="./images/foodApp/15.png" style="width: 80%" />
         <a class="next" onclick="plusSlides(1)">&#10095;</a>
       </div>
     </div>
